--- a/index.html
+++ b/index.html
@@ -50,6 +50,10 @@
         <h3>Yemek Organizasyonu</h3>
         <p>Ziyaretçilere uygun yemek ve ikramların hazırlanması.</p>
       </div>
+	  <div onclick="window.location.href='cemeteries.html'" class="service">
+        <h3>Mezarlıklar</h3>
+        <p>Mezarlık listesi</p>
+      </div>
       <div class="service">
         <h3>Taziye Defteri</h3>
         <p>Misafirlerin mesaj bırakabilmesi için defter temini.</p>
@@ -85,9 +89,10 @@
 
   <!-- WhatsApp Butonu -->
   <a href="https://wa.me/905551234567" target="_blank" rel="noopener" aria-label="WhatsApp ile iletişim" class="whatsapp-btn">
-    <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false">
-      <path fill="white" d="M20.52 3.48a11.902 11.902 0 0 0-17 0 11.926 11.926 0 0 0-3.5 8.5 12.05 12.05 0 0 0 3.5 8.5l-2 6 6-2a12.05 12.05 0 0 0 8.5 3.5 11.95 11.95 0 0 0 8.5-3.5 11.9 11.9 0 0 0 0-17zm-8 15.07a9.56 9.56 0 0 1-5.15-1.5l-.37-.22-3.07.99 1-3.01-.24-.38a9.55 9.55 0 1 1 7.83 3.12zm5.54-7.44c-.3-.15-1.76-.87-2.04-.97-.27-.1-.47-.15-.67.15s-.77.97-.94 1.17-.35.22-.65.07a8.63 8.63 0 0 1-2.54-1.57 9.26 9.26 0 0 1-1.71-2.12c-.18-.3 0-.46.13-.61.14-.14.3-.35.45-.52a1.43 1.43 0 0 0 .22-.37c.07-.15 0-.28-.03-.4-.08-.14-.67-1.6-.92-2.18-.24-.57-.49-.5-.67-.51-.18-.01-.38-.01-.58-.01a1.28 1.28 0 0 0-.93.44c-.32.3-1.23 1.2-1.23 2.9s1.26 3.38 1.43 3.62c.18.25 2.47 3.78 5.99 5.3a14.93 14.93 0 0 0 2.06.86c.31.13.6.11.83.07.26-.05.77-.31.88-.61.12-.3.12-.56.08-.62-.03-.06-.26-.1-.56-.22z"/>
-    </svg>
+ <svg viewBox="0 0 32 32" class="whatsapp-ico">
+	<path d=" M19.11 17.205c-.372 0-1.088 1.39-1.518 1.39a.63.63 0 0 1-.315-.1c-.802-.402-1.504-.817-2.163-1.447-.545-.516-1.146-1.29-1.46-1.963a.426.426 0 0 1-.073-.215c0-.33.99-.945.99-1.49 0-.143-.73-2.09-.832-2.335-.143-.372-.214-.487-.6-.487-.187 0-.36-.043-.53-.043-.302 0-.53.115-.746.315-.688.645-1.032 1.318-1.06 2.264v.114c-.015.99.472 1.977 1.017 2.78 1.23 1.82 2.506 3.41 4.554 4.34.616.287 2.035.888 2.722.888.817 0 2.15-.515 2.478-1.318.13-.33.244-.73.244-1.088 0-.058 0-.144-.03-.215-.1-.172-2.434-1.39-2.678-1.39zm-2.908 7.593c-1.747 0-3.48-.53-4.942-1.49L7.793 24.41l1.132-3.337a8.955 8.955 0 0 1-1.72-5.272c0-4.955 4.04-8.995 8.997-8.995S25.2 10.845 25.2 15.8c0 4.958-4.04 8.998-8.998 8.998zm0-19.798c-5.96 0-10.8 4.842-10.8 10.8 0 1.964.53 3.898 1.546 5.574L5 27.176l5.974-1.92a10.807 10.807 0 0 0 16.03-9.455c0-5.958-4.842-10.8-10.802-10.8z" fill-rule="evenodd">
+	</path>
+ </svg>
   </a>
 </body>
 </html>
