--- a/cemeteries.html
+++ b/cemeteries.html
@@ -2,10 +2,25 @@
 <html>
 <head>
   <title>Mezarlıklar</title>
-  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
+  <link rel="stylesheet" href="styles.css" />
+
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.42.3/dist/umd/supabase.js"></script>
 </head>
 <body>
-  <h1>Mezarlıklar</h1>
+  <h1>Mezarliklar</h1>
+  
+  <table id="cemeteryTable" border="1">
+    <thead>
+      <tr>
+        <th>Name</th>
+        <th>City</th>
+        <th>Address</th>
+      </tr>
+    </thead>
+    <tbody id="dataContainer">
+    </tbody>
+  </table>
+  
   <script type="module" src="cemeteries.js"></script>
 </body>
 </html>
