feat: add pagination

--- a/cemeteries.html
+++ b/cemeteries.html
@@ -7,7 +7,7 @@
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.42.3/dist/umd/supabase.js"></script>
 </head>
 <body>
-  <h1>Mezarliklar</h1>
+  <h1>Mezarlıklar</h1>
   
   <table id="cemeteryTable" border="1">
     <thead>
@@ -20,7 +20,8 @@
     <tbody id="dataContainer">
     </tbody>
   </table>
-  
+    <div id="pagination" class="pagination"></div>
+
   <script type="module" src="cemeteries.js"></script>
 </body>
 </html>
