refactor: change about us text

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <section class="about" aria-label="Hakkımızda">
       <h2>Hakkımızda</h2>
       <p>
-        Taziyem, zor günlerinizde yanınızda olmak için kuruldu. Yakınlarınızın vefatında ne yapacağınızı bilmediğinizde,
+        Taziyem, zor günlerinizde yanınızda olmak için kuruldu. Yakınlarınızın vefatında sizi yalnız bırakmayarak,
         tüm organizasyonu üstlenerek size destek oluyoruz. Mekan, yemek, misafir karşılama ve daha fazlası, her şey en ince ayrıntısına kadar planlanır.
         Sizin tek yapmanız gereken bizden destek almak.
       </p>
